--- a/appunti/appunti-prof-morbidelli/settings.sty
+++ b/appunti/appunti-prof-morbidelli/settings.sty
@@ -1,9 +1,13 @@
 % questo file contiene ciò che sarebbe buona norma includere in ogni file
-\usepackage{amssymb}
-\usepackage{mathtools}
+\NeedsTeXFormat{LaTeX2e}[1994/06/01]
+\ProvidesPackage{settings}
+  [2011/01/11 v0.01 LaTeX package for my own purpose]
+
+\RequirePackage{amssymb,mathtools}
 
 
 \newcommand {\R}{\mathbb{R}}
 \newcommand {\N}{\mathbb{N}}
 \newcommand{\ox}{\overline{x}}
 \newcommand{\oy}{\overline{y}}
+\endinput
